Fix image alignments

--- a/src/app/views/home/home.component.sass
+++ b/src/app/views/home/home.component.sass
@@ -58,7 +58,7 @@
 
         .box-shadow
           text-align: right
-          margin-left: -50%
+          margin-left: -40%
           padding-left: 50%
 
 
@@ -66,7 +66,7 @@
   
         .box-shadow
           margin-right: -50%
-          padding-right: 50%
+          padding-right: 55%
           
 
 
@@ -91,15 +91,12 @@
     figure
       z-index: 1
       position: relative
+      margin: 0
 
       img
         max-width: 100%
         height: auto
     
-    .cubic-assets,
-    .emerge-assets
-      figure
-        margin: 0
 
     .cubic-assets
       ._macbook
@@ -122,5 +119,16 @@
         left: 20px
         top: 50px
 
+    .brewbox-assets
+      figure
+        position: relative
+        top: 50%
+        margin-top: -100px
+
+    
+    .dakota-assets
+      figure
+        position: relative
+        top: 50px
 
       
